# advent-of-code

2022/: Cargo.toml
2022/day1/: input.txt  main.rs
2022/day10/: input.txt  main.rs
2022/day11/: input.txt  main.rs
2022/day12/: input.txt  main.rs
2022/day13/: input.txt  main.rs
2022/day14/: input.txt  main.rs
2022/day15/: input.txt  main.rs
2022/day16/: main.rs
2022/day17/: input.txt  main.rs
2022/day2/: main.rs
2022/day3/: main.rs
2022/day4/: input.txt  main.rs
2022/day5/: input.txt  main.rs
2022/day6/: input.txt  main.rs
2022/day7/: input.txt  main.rs
2022/day8/: input.txt  main.rs
2022/day9/: input.txt  main.rs
2023/aocaml/: dune-project
day12/src/: main.rs
day16/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
y2024/: Cargo.toml
y2024/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
