[package]
name = "y2022"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
nohash-hasher = "0.2.0"

[[bin]]
name = "1"
path = "day1/main.rs"

[[bin]]
name = "2"
path = "day2/main.rs"

[[bin]]
name = "3"
path = "day3/main.rs"

[[bin]]
name = "4"
path = "day4/main.rs"

[[bin]]
name = "5"
path = "day5/main.rs"

[[bin]]
name = "6"
path = "day6/main.rs"

[[bin]]
name = "7"
path = "day7/main.rs"

[[bin]]
name = "8"
path = "day8/main.rs"

[[bin]]
name = "9"
path = "day9/main.rs"

[[bin]]
name = "10"
path = "day10/main.rs"

[[bin]]
name = "11"
path = "day11/main.rs"

[[bin]]
name = "12"
path = "day12/main.rs"

[[bin]]
name = "13"
path = "day13/main.rs"

[[bin]]
name = "14"
path = "day14/main.rs"

[[bin]]
name = "15"
path = "day15/main.rs"

[[bin]]
name = "16"
path = "day16/main.rs"

[[bin]]
name = "17"
path = "day17/main.rs"

[profile.release]
debug = true
